# somedb

./: .gitignore  Cargo.toml  README.md  TESTING.md
examples/: auto_generate_ids.rs  delete_by_id.rs  load_all.rs  save_query.rs  simple_query.rs  store_and_load.rs
parrwtest/: Cargo.toml  data
parrwtest/src/: main.rs
somedb/: Cargo.toml
somedb-macros/: Cargo.toml
somedb-macros/src/: lib.rs
somedb/src/: db.rs  entity.rs  entity_meta.rs  sha.rs
src/: byte_reader.rs  db.rs  entity.rs  entity_meta.rs  gen_query.rs  id.rs  lib.rs  main.rs  query.rs  sha.rs  storable.rs  type_hash.rs
tests/: graceful_failure.rs
