[workspace]
members = ["somedb-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
description = "A simple database for storing data."
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/slackers123/somedb"

[workspace.dependencies]
somedb-macros = { path = "somedb-macros", version = "0.1.0" }

[package]
name = "somedb"
version.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
somedb-macros.workspace = true

[[example]]
name = "store_and_load"
test = true

[[example]]
name = "load_all"
test = true

[[example]]
name = "auto_generate_ids"
test = true
