[package]
name = "somedb-macros"
version.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
name = "somedb_macros"
path = "src/lib.rs"
proc-macro = true


[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
